--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google-cloud/storage": "^5.1.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.3",
     "mongoose": "^5.9.17",
